docs: melhora models adicionando examples para docs
