# docs/swagger.json
@@ -82,7 +82,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.TokenLoginRequest"
                         }
                     },
                     "500": {
@@ -129,7 +129,7 @@
             "properties": {
                 "status": {
                     "type": "string",
-                    "example": "available"
+                    "example": "up"
                 }
             }
         },
@@ -153,20 +153,37 @@
                 }
             }
         },
+        "models.TokenLoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "email@email.com"
+                },
+                "senha": {
+                    "type": "string",
+                    "example": "qualquerumamenosabre123"
+                }
+            }
+        },
         "usecase.BuscarCepOutputDTO": {
             "type": "object",
             "properties": {
                 "bairro": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Inhaúma"
                 },
                 "cidade": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rio de Janeiro"
                 },
                 "estado": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "RJ"
                 },
                 "rua": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rua José dos Reis"
                 }
             }
         }
